feat: improve core logic
